[package]
name = "bounce_pkt"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
hickory-resolver = "0.25.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["fs","sync"] }
warp = { version = "0.4.2", features = ["server"] }
